--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="q">
-        <activity android:name=".activities.BantuanActivity"></activity>
+        <activity android:name=".activities.DetailItineraryActivity"></activity>
+        <activity android:name=".activities.BantuanActivity" />
         <activity android:name=".activities.TipsActivity" />
         <activity android:name=".activities.DetailPeralatanActivity" />
         <activity android:name=".activities.DetailGunungActivity" />
